# SNAKE_3D

./: .gitignore  CMakeLists.txt  fallback.c  mvp.h
app/: main.c
assets/shaders/: fallback.frag  fallback.vert  shader.frag  shader.vert  skybox.frag  skybox.vert  terrain.frag  terrain.vert
core/: geometry_calculation.c  geometry_calculation.h  logger.c  logger.h  mvp.c  mvp.h  window.c  window.h
geometry/: mesh.c  mesh.h  models.c  models.h  primitives.c  primitives.h
input/: input.c  input.h
loaders/: shaders.c  shaders.h  terrain.c  terrain.h  textures.c  textures.h
render/: render.c  render.h
resources/: shaders.c  shaders.h  textures.c  textures.h
scene/: camera.c  camera.h  camera_controller.c  camera_controller.h  camera_system.c  camera_system.h
